--- a/style.css
+++ b/style.css
@@ -1,16 +1,165 @@
 .mtavari{
     width: 1280px;
-    height: 2471px;
+    background-color: white;
 }
 .top {
-    width: 1280px;
-    height: 150px;
+    width: 100%;
+    height: 130px;
 
 }
 .hd1 {
+    margin-left: 20px;
     display: inline-block;
-    vertical-align: top;
     width: 374px;
     height: 94px;
     font-size: 70px; font-weight: bold;
+}
+.nav1 {
+    margin-top: 25px;
+    width: 700px;
+    height: 24px;
+    display: inline-block;
+    vertical-align: top;
+}
+.ul1 {
+    display: inline-block;
+    vertical-align: top;
+}
+.li1, .li2, .li3, .li4{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 18px;
+    
+}
+.imgs1 {
+    width: 127px;
+    height: 16px;
+    display: inline-block;
+    margin-top:20px;
+    margin-left: 100px;
+}
+.img2, .img3 , .img4 {
+    margin-left: 15px;
+    display: inline-block;
+}
+.midle1 {
+    background-image: url(./img/Banner\ Image.png);
+    width: 1281px;
+    height: 855px;
+    position: relative;
+}
+.box1 {
+    width: 706px;
+    height: 187px;
+    background-color: white;
+    position: absolute;
+    left: 287px ;
+    top: 639px;   
+    
+}
+.box1-h1{
+    text-align: center;
+    margin-top:67px ;
+    margin-left: 50px;
+    font-style: italic;
+}
+.midle2 {
+    width: 1280px;
+    height: 779px;
+    background-color: green;
+}
+.midle2-box1 {
+    display: inline-block;
+    width: 679px;
+    height: 453px;
+    margin-top: 154px;
+    margin-left: 138px;
+}
+.midle3 {
+    display: inline-block;
+    width: 306px;
+    height: 394px;
+   
+   vertical-align: top;
+   margin-left: 25px;
+}
+.header1 {
+    vertical-align: top;
+    margin-top: 140px;
+    font-size: 40px ;
+ 
+} 
+.midle3-p1 {
+    width: 306px;
+    height: 291px;
+    color: white;
+    font-style: italic;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.aftmidle-h1 {
+    text-align: center;
+     /* width: 273px;
+    height: 98px;  */
+    margin-top: 110px;
+    font-size: 40px;
+    font-style: italic; 
+}
+.finishing1 {
+    margin-left: 292px;
+    width: 696px;
+    height: 247px;
+    margin-top: 64px ;    
+}
+.finishing-p1 {
+    font-size: 20px;
+    font-style: italic;
+}
+.finishing-p2 {
+    font-size: 20px;
+    font-style: italic;
+    
+}
+.finishinig3{
+    width: 148px;
+    height: 48px;
+    background-color: black;
+    margin-left: 566px;
+    margin-top: 25px;
+}
+.span1 {
+       
+    font-size: 12px;
+    color: white;
+    padding-left: 25px;  
+    padding-top: 15px;
+
+}
+
+.lastpart {
+    width: 1280px;
+    height: 76px;
+    background-color: green;
+    margin-bottom: 15px;
+}
+.lastpart-p1 {
+   display: inline-block;
+   width: 50px;
+   height: 16px;
+   color: aliceblue;
+   margin-left: 81px ;
+   padding-top: 30px ;
+}
+.lastpart-ul {
+    display: inline-block;
+    width: 275px;
+    height: 15px;
+    margin-left: 490px ;
+}
+.lastpart-ul li {
+    display: inline-block;
+    margin-left: 15px ;
+    width: 40px;
+    height: 15px;
+
 }
